# moos-ivp-swarm

./: CMakeLists.txt  CMakeLists.txt~  README.md  build.sh~
missions/LCMComms_test/: meta_shoreside.moos  node.bhv  node.moos  shore.moos
missions/single_auv_mseas/: clean.sh  launch_nodes.sh  launch_shore.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos  plug_pShare.moos  plug_uFldNodeBroker.moos  plug_uSimMarine.moos
missions/swarm_test/: launch_nodes.sh  meta_shoreside.moos  meta_vehicle.bhv  plug_iMSEASOceanModel.moos  plug_uFldNodeBroker.moos
missions/swarm_test_MSEASDirect/: launch_nodes.sh  meta_shoreside.moos  plug_uFldNodeBroker.moos
missions/swarm_test_alt_lcm1/: launch_nodes.sh  launch_shore.sh  meta_shoreside.moos  meta_vehicle.moos  plug_pLCMNodeMgr.moos  plug_pNodeLCMComms.moos  plug_pNodeManager.moos  plug_uFldNodeBroker.moos
missions/swarm_test_alt_lcm2/: launch_nodes.sh  launch_shore.sh  meta_shoreside.moos  meta_vehicle.moos  plug_pLCMNodeMgr.moos
missions/swarm_test_lcm/: launch_nodes.sh  launch_shore.sh  meta_shoreside.moos  meta_vehicle.moos  plug_pHostInfo.moos
missions/swarm_test_noOM/: launch_nodes.sh  launch_shore.sh  meta_shoreside.moos  plug_origin_warp.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos  plug_uSimMarine.moos
python/: node_drift_t.py  node_in_t.py  node_nav_t.py  node_out_t.py  swarm_visualize.py
src/: CMakeLists.txt
src/iMSEASOceanModel/: CMakeLists.txt  MSEASOceanModel.cpp  MSEASOceanModel.h  MSEASOceanModel_Info.cpp  MSEASOceanModel_Info.h  iMSEASOceanModel.moos  main.cpp  mseas_model_batch_request.m  parcellfun.m  parcellfun_alt.m  parcellfun_opts.m  readmseaspe_octave.m  test_getmseas_octave_parallel.m  test_getmseas_octave_series.m  test_octave.m
src/iMSEASOceanModelDirect/: CMakeLists.txt  MSEASOceanModelDirect.cpp  iMSEASOceanModelDirect.moos  readmseaspe_moossafir.m
src/iTestMSEASTime/: CMakeLists.txt  TestMSEASTime.cpp  TestMSEASTime.h  TestMSEASTime_Info.cpp  TestMSEASTime_Info.h  iTestMSEASTime.moos  main.cpp
src/lcmtypes/: CMakeLists.txt  CMakeLists.txt~  lcm_moos_t.lcm~  node_drift_t.lcm  node_in_t.lcm  node_in_t.lcm~  node_nav_t (copy).lcm~  node_nav_t.lcm  node_out_t.lcm  node_out_t.lcm~
src/pLCMNodeMgr/: CMakeLists.txt  LCMNodeMgr.cpp  LCMNodeMgr.h  LCMNodeMgr_Info.cpp  LCMNodeMgr_Info.h  main.cpp  pLCMNodeMgr.moos
src/pLCMOceanModelMgr/: CMakeLists.txt  LCMOceanModelMgr.cpp  LCMOceanModelMgr.h  LCMOceanModelMgr_Info.cpp  LCMOceanModelMgr_Info.h  main.cpp  pLCMOceanModelMgr.moos
src/pMSEASOceanModelGridRender/: CMakeLists.txt  MSEASOceanModelGridRender.cpp  MSEASOceanModelGridRender.h  MSEASOceanModelGridRender_Info.cpp  MSEASOceanModelGridRender_Info.h  main.cpp  pMSEASOceanModelGridRender.moos
src/pNodeLCMComms/: CMakeLists.txt  NodeLCMComms.cpp  NodeLCMComms.h  NodeLCMComms_Info.cpp  NodeLCMComms_Info.h  main.cpp  pNodeLCMComms.moos
src/pNodeManager/: CMakeLists.txt  NodeManager.cpp  NodeManager.h  NodeManager_Info.cpp  NodeManager_Info.h  main.cpp
src/pShoreLCMComms/: CMakeLists.txt  ShoreLCMComms.cpp  ShoreLCMComms.h  ShoreLCMComms_Info.cpp  ShoreLCMComms_Info.h  main.cpp  pShoreLCMComms.moos
src/pShoreLCMComms/lcmtypes/: swarm_vars_t.lcm
src/pSwarmManager/: CMakeLists.txt  SwarmManager.cpp  SwarmManager.h  SwarmManager_Info.cpp  SwarmManager_Info.h  main.cpp  pSwarmManager.moos
